style: Shrink mobile banner height + cleanup

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,9 +1,6 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
 $wls-green: #2F855A
 $wls-green-invert: #F0FFF4
 
@@ -46,7 +43,7 @@ $black: #2b2523
 
 .full-width-image
   width: 100vw
-  height: 400px
+  height: 300px
   background-size: cover
   background-position: bottom
   display: flex
@@ -115,7 +112,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033
+  background-color: #d64000
 .blog-list-item header
   display: flex
   margin-bottom: 1em
