fix: Embrace all of Bulma

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,4 +1,4 @@
-@import "~bulma/sass/utilities/initial-variables"
+@import 'bulma/bulma.sass'
 
 // Config vars
 $wls-green: #2F855A
@@ -120,7 +120,6 @@ $menu-label-color: $white-ter
   flex-basis: 35%
   margin: 0 1.5em 0 0
 
-@import "~bulma"
 
 // responsiveness
 +tablet-only
