--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -50,18 +50,9 @@ $black: #2b2523
   justify-content: center
   align-items: center
 
-.btn
-  display: inline-block
-  padding: 12px 16px 10px
-  font-size: 18px
-  font-size: 1rem
-  line-height: 1.25
+.is-green
   background-color: $wls-green-invert
-  border-radius: .25rem
-  text-decoration: none
-  font-weight: 700
   color: $wls-green
-  text-align: center
   -webkit-box-shadow: inset 0 0 0 2px $wls-green
   box-shadow: inset 0 0 0 2px $wls-green
   -webkit-transition: all .15s ease
